<resources>
    <string name="app_name">PetHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_pethome">全國動物收容</string>
    <string name="title_rovebulletin">流浪通報</string>
    <string name="title_members">會員專區</string>
    <string name="user">訪客</string>
    <string name="Action">我的發現</string>
    <string name="Like">我的關注</string>
    <string name="Sponsor">贊助商</string>
    <string name="sign">點擊這裡登入帳號</string>
    <string name="signin">登入</string>
    <string name="regin">立即註冊</string>
    <string name="registered">註冊</string>
    <string name="name">暱稱</string>
    <string name="member">會員</string>
    <string name="hello">您好</string>
    <string name="signout">登出</string>

    <string name="img_Buttom">選擇檔案</string>
    <string name="Data_Buttom">詳細資料</string>
    <string name="Edit_Buttom">編輯</string>
    <string name="Back_Buttom">回上頁</string>
    <string name="OK_Buttom">確認</string>
    <string name="Del_Buttom">刪除</string>
    <string name="time">發現時間</string>
    <string name="place">發現地點</string>
    <string name="feature">寵物特徵</string>
    <string name="detection">發現人</string>
    <string name="phone">聯絡電話</string>
    <string name="explain">詳細說明</string>

    <string name="facebook_app_id">2567667486650255</string>
    <string name="fb_login_protocol_scheme">fb2567667486650255</string>
</resources>
