<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_notifications">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pethome.ui.home.HomeFragment"
        android:label="@string/title_pethome"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.pethome.ui.dashboard.DashboardFragment"
        android:label="@string/title_rovebulletin"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.pethome.ui.Members.MembersFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_notifications" />
</navigation>